--- a/home.html
+++ b/home.html
@@ -37,18 +37,18 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
             <div class="item active">
-              <img src="đồ án/hinh1.jpg" alt="Los Angeles" style="width:100%;">
+              <img src="đồ án/hinh1.jpg" alt="Los Angeles" width="1500px" height="250px">
             </div>
 
             <div class="item">
-              <img src="đồ án/hinh2.jpg" alt="Chicago" style="width:100%;">
+              <img src="đồ án/hinh2.jpg" alt="Chicago" width="1500px" height="250px">
             </div>
           
             <div class="item">
-              <img src="đồ án/hinh3.jpg" alt="New york" style="width:100%;">
+              <img src="đồ án/hinh3.jpg" alt="New york" width="1500px" height="250px">
             </div>
             <div class="item">
-                <img src="đồ án/hinh5.jpg" alt="New york" width="100%" height="50px">
+                <img src="đồ án/hinh5.png" alt="New york" width="1500px" height="250px">
               </div>
           </div>
       
