--- a/home.html
+++ b/home.html
@@ -65,7 +65,10 @@
     </div>
     <table align="center">
       <tr>
-        <td><img src="đồ án/gym1.jpg" width="450px" height="620px"></td>
+        <figure>
+          <td><img src="đồ án/gym1.jpg" width="450px" height="620px"></td>
+        </figure>
+        
         <td><img src="đồ án/gym2.jpg" width="450px" height="620px"></td>
       </tr>
       <tr>
