--- a/home.html
+++ b/home.html
@@ -34,17 +34,17 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="doAn/hinh1.jpg" alt="Los Angeles" width="1500px" height="100px">
+          <img src="doAn/hinh1.jpg" alt="Los Angeles" >
         </div>
         <div class="item">
-          <img src="doAn/hinh2.jpg" alt="Chicago" width="1500px" height="100px">
+          <img src="doAn/hinh2.jpg" alt="Chicago" >
         </div>
       
         <div class="item">
-          <img src="doAn/hinh3.jpg" alt="New york" width="1500px" height="100px">
+          <img src="doAn/hinh3.jpg" alt="New york" >
         </div>
         <div class="item">
-            <img src="doAn/hinh5.jpg" alt="New york" width="1500px" height="100px">
+            <img src="doAn/hinh5.jpg" alt="New york" >
           </div>
       </div>
   
@@ -95,6 +95,7 @@
       </tr>
     </div>
     </table>
+    <footer>
     <table class="table2">
       <tr>
         <td rowspan="3">
@@ -109,6 +110,7 @@
           <p>Email: fitness@gmail.com</p>
         </td>
       </tr>           
-    </table>   
+    </table>
+  </footer>   
 </body>
 </html>
