--- a/home.html
+++ b/home.html
@@ -21,6 +21,7 @@
     <div class="view" ng-view ng-controller="myCtrl"> 
     </div> 
 </div>
+<!-- start carousel -->
 <div class="container">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
@@ -58,7 +59,7 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-</div>
+ </div> <!-- end carousel -->
     <table align="center" class="table1">
       <div class="bgr">
       <tr>
@@ -80,17 +81,12 @@
         <td>Harley Pasternak is a Canadian author. Anh is a well-known example of a diin gia gây cm hng, a tác gia many cun sách, and a dn chng trnh. Kim Kardashian, Megan Fox, Lady Gaga, Ariana Grande, Adam Levine, Kanye West, and Amy Schumer are among the celebrities Harley's khách hàng include.</td>
       </tr>
       <tr>
-        <td>Trang Lê huấn luyện viên thể hình online 23 tuổi, để có cơ bụng chắc khỏe, cô thường chọn các bài pilates kết hợp cùng hít thở. Đối với vòng 3, cô tập các bài lunges, squat, deadlift, tập gym với mức tạ nặng tăng dần theo thời gian để kích thích phần cơ mông phát triển.</td>
+        <td>Trang Le 23-year-old online fitness trainer, to have strong abs, she often chooses pilates exercises combined with breathing. For the third round, she practiced lunges, squats, deadlifts, gym exercises with heavy weights that gradually increased over time to stimulate the development of the glutes..</td>
         <td><img src="doAn/gym4.jpg" width="450px" height="620px"></td>
       </tr>
       <tr>
         <td><img src="doAn/yoga.jpg" width="450px" height="620px"></td>
-        <td>Yoga Sophie 
-          Dạy học bằng cái tâm, sự nhiệt huyết và học hỏi không ngừng
-          Được chứng nhận là giáo viên Yoga quốc tế bởi hiệp hội Yoga Asean.
-          Giáo viên dạy Yoga online với hàng ngàn học viên.
-          Bên cạnh đó, cô cũng là người truyền cảm hứng giúp mọi người cùng tập Yoga vì một cuộc sống tốt đẹp hơn.
-           Hiện nay trên kênh Youtube của Sophie đang có hơn 191 ngàn người đăng ký và trên trang fanpage có hơn 28 nghìn người theo dõi. Với hai trang thông tin chính này mọi người có thể dễ dàng đăng ký để thử sức với bộ môn thể dục này. 
+        <td>Yoga Sophie teaches with heart, enthusiasm and continuous learning, certified as an international yoga teacher by the Asean yoga association. Teachers teach online with thousands of students. Besides, she is also an inspiration to help people practice yoga for a better life. Currently on Sophie's youtube channel there are more than 191,000 subscribers and on the fanpage there are more than 28,000 followers. With these 2 main information pages, people can easily register to try this sport.
           </td>
       </tr>
     </div>
