--- a/shop.html
+++ b/shop.html
@@ -50,13 +50,19 @@ ul.products{
     display:flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    
+}
+.ul.products li{
+    flex-basis: 25%;
+    padding-left: 15px;
+    padding-right: 15px;
+    box-sizing: border-box;
+    margin-bottom: 30px;
 }
 .product-item{
     width: 292.5px;
     margin-bottom: 30px;
 }
-.products, li, img{
+.products li img{
     max-width: 100%;
     height: auto;
 }
@@ -69,21 +75,21 @@ a.buy-now{
     color: #fff;
     padding: 10ppx 0px;
 }
-.products, li, .product-info, a{
+.products li .product-info a{
     display: block;
     text-decoration: none;
 }
-.products, li, .product-info, a.product-cat{
+.products li .product-info a.product-cat{
     font-size: 11px;
     text-transform:uppercase;
     color: #9e9e9e;
     padding: 3px 0px;
 }
-.products, li, .product-info, a.product-name{
+.products li .product-info a.product-name{
  color: #334862;
  padding: 3px 0px;
 }
-.products ,li, .product-info, a.product-price{
+.products li .product-info a.product-price{
     color: #111;
     padding: 2px 0px;
     font-weight: 600;
@@ -100,9 +106,8 @@ a.buy-now{
                     <div class="product-top">
                         <a href="" class="product-thumb">
                             <img src="doAn/binh1.jpg" alt="">
-                            <a href="" class="product-name"></a>
-                        </a>
-                        <a href="" class="buy-now">Buy Now</a>
+                            <a href="" class="product-name"></a></br><br>
+                        <button><a href="" class="buy-now">Buy Now</a></button>
                     </div>
                     <div class="product-info">
                         <a href="" class="product_cat">Bags</a>
