--- a/bottleShop.html
+++ b/bottleShop.html
@@ -39,11 +39,14 @@
             font-weight: 600;
             font-size:large;
             font-style: inherit;
-            width: 10px;
             padding-left: 100px;
         }
         a{
             text-decoration: none
+        }
+        .anhBottle{
+          width: 150px;
+          height: 350px;
         }
     </style>
 </head>
@@ -62,10 +65,10 @@
               <input type="checkbox" id="showDrop">
               <label for="showDrop" class="mobile-item">Online Shopping</label>
               <ul class="drop-menu">
-                <li><a href="#">Bottle</a></li>
-                <li><a href="#">Equipment</a></li>
-                <li><a href="#">Training Shoes</a></li>
-                <li><a href="#">Protein Powder</a></li>
+                <li><a href="dungcuShop.html">Equipment</a></li>
+                <li><a href="giayShop.html">Training Shoes</a></li>
+                <li><a href="bottleShop.html">Bottle</a></li>
+                <li><a href="thucphamShop.html">Protein Powder</a></li>
               </ul>
             </li>
             <li>
@@ -96,10 +99,10 @@
                 </td>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/bottle1.jpg" alt=""></a>
+                        <a href=""><img src="doAn/bottle1.jpg" class="anhBottle" alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">700ml shaker bottle</p>
-                            <p class="tien">$35</p>
+                            <p class="nameGiay">Hydro Flask Wide Mouth Straw Lid</p>
+                            <p class="tien">$49</p>
                             <button type="">
                                 add to cart
                             </button>
@@ -108,10 +111,10 @@
                 </td>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/bottle2.jpg" alt=""></a>
+                        <a href=""><img src="doAn/bottle2.jpg" class="anhBottle" alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">Bottle 1000ml (7cm*29cm)</p>
-                            <p class="tien">$43</p>
+                            <p class="nameGiay">BlenderBottle Hydration Halex Squeeze Water Bottle with Straw</p>
+                            <p class="tien">$12</p>
                             <button type="">
                                 add to cart
                             </button>
@@ -120,10 +123,10 @@
                 </td>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/bottle3.jpg" alt=""></a>
+                        <a href=""><img src="doAn/bottle3.jpg" class="anhBottle" alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">Nike Fuel 64 oz. Insulated Jug</p>
-                            <p class="tien">$40</p>
+                            <p class="nameGiay">Zulu Atlas Glass Water Bottle with Silicone Sleeve</p>
+                            <p class="tien">$16</p>
                             <button type="">
                                 add to cart
                             </button>
@@ -134,10 +137,10 @@
             <tr>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/boottle4.jpg" alt=""></a>
+                        <a href=""><img src="doAn/bottle4.jpg" class="anhBottle" alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">Venum Contender Water Bottle</p>
-                            <p class="tien">$9.6</p>
+                            <p class="nameGiay">Nike Hyper Fuel Sports Water Bottle</p>
+                            <p class="tien">$22</p>
                             <button type="">
                                 add to cart
                             </button>
@@ -146,10 +149,10 @@
                 </td>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/giay5.webp" alt=""></a>
+                        <a href=""><img src="doAn/bottle5.jpg" class="anhBottle" alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">Nike Air Zoom SuperRep 3</p>
-                            <p class="tien">$141.63</p>
+                            <p class="nameGiay">Takeya, White Originals Vacuum-Insulated Stainless-Steel Water Bottle </p>
+                            <p class="tien">$27.99</p>
                             <button type="">
                                 add to cart
                             </button>
@@ -158,10 +161,11 @@
                 </td>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/giay6.webp" alt=""></a>
+                        <a href=""><img src="doAn/bottle6.jpg" class="anhBottle" alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">Nike MC Trainer</p>
-                            <p class="tien">$83.27</p>
+                            <p class="nameGiay">Under Armour 16oz Protégé Water Bottle, Stainless Steel, Vacuum Insulated,
+                               Leak Resistant Lid, Self Draining Cap, For Kids & Adults</p>
+                            <p class="tien">$25</p>
                             <button type="">
                                 add to cart
                             </button>
@@ -183,10 +187,10 @@
                 <div class="footer-col">
                   <h4>Online shop</h4>
                   <ul>
-                    <li><a href="#">Bottle</a></li>
-                    <li><a href="#">Equipment</a></li>
-                    <li><a href="#">Training Shoes</a></li>
-                    <li><a href="#">Protein Powder</a></li>
+                    <li><a href="dungcuShop.html">Equipment</a></li>
+                    <li><a href="giayShop.html">Training Shoes</a></li>
+                    <li><a href="bottleShop.html">Bottle</a></li>
+                    <li><a href="thucphamShop.html">Protein Powder</a></li>
                   </ul>
                 </div>
                 <div class="footer-col">
