--- a/dungcuShop.html
+++ b/dungcuShop.html
@@ -62,10 +62,10 @@
               <input type="checkbox" id="showDrop">
               <label for="showDrop" class="mobile-item">Online Shopping</label>
               <ul class="drop-menu">
-                <li><a href="#">Bottle</a></li>
-                <li><a href="#">Equipment</a></li>
-                <li><a href="#">Training Shoes</a></li>
-                <li><a href="#">Protein Powder</a></li>
+                <li><a href="dungcuShop.html">Equipment</a></li>
+                <li><a href="giayShop.html">Training Shoes</a></li>
+                <li><a href="bottleShop.html">Bottle</a></li>
+                <li><a href="thucphamShop.html">Protein Powder</a></li>
               </ul>
             </li>
             <li>
@@ -96,10 +96,10 @@
                 </td>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/giay1.webp" alt=""></a>
+                        <a href=""><img src="doAn/dcu1.webp" alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">Nike Metcon 8 MF</p>
-                            <p class="tien">$154.11</p>
+                            <p class="nameGiay">Spinning Pace Connected Spinner Bike</p>
+                            <p class="tien">$595.00</p>
                             <button type="">
                                 add to cart
                             </button>
@@ -108,10 +108,10 @@
                 </td>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/giay2.webp" alt=""></a>
+                        <a href=""><img src="doAn/dcu2.webp" alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">Nike Metcon 8</p>
-                            <p class="tien">$154.11</p>
+                            <p class="nameGiay">YORK Barbell Perform Home Gym</p>
+                            <p class="tien">$970.00</p>
                             <button type="">
                                 add to cart
                             </button>
@@ -120,10 +120,10 @@
                 </td>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/giay3.webp" alt=""></a>
+                        <a href=""><img src="doAn/dcu3.webp " alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">Nike Metcon 8</p>
-                            <p class="tien">$154.11</p>
+                            <p class="nameGiay">York Barbell Single Kettlebell Black 5lb-80lb</p>
+                            <p class="tien">$23.00</p>
                             <button type="">
                                 add to cart
                             </button>
@@ -134,10 +134,10 @@
             <tr>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/giay4.webp" alt=""></a>
+                        <a href=""><img src="doAn/dcu4.jpg" alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">Nike Defy All Day</p>
-                            <p class="tien">$76.83</p>
+                            <p class="nameGiay">Vaunn Medical Folding Pedal Exerciser with Electronic Display for Legs and Arms Workout</p>
+                            <p class="tien">$48</p>
                             <button type="">
                                 add to cart
                             </button>
@@ -146,10 +146,10 @@
                 </td>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/giay5.webp" alt=""></a>
+                        <a href=""><img src="doAn/dcu5.jpg" alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">Nike Air Zoom SuperRep 3</p>
-                            <p class="tien">$141.63</p>
+                            <p class="nameGiay">Everlast Mixed Martial Arts Heavy Bag Gloves</p>
+                            <p class="tien">$31.99</p>
                             <button type="">
                                 add to cart
                             </button>
@@ -158,10 +158,10 @@
                 </td>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/giay6.webp" alt=""></a>
+                        <a href=""><img src="doAn/dcu6.jpg" alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">Nike MC Trainer</p>
-                            <p class="tien">$83.27</p>
+                            <p class="nameGiay">SKIPPING-ROPE</p>
+                            <p class="tien">$10</p>
                             <button type="">
                                 add to cart
                             </button>
@@ -183,10 +183,10 @@
                 <div class="footer-col">
                   <h4>Online shop</h4>
                   <ul>
-                    <li><a href="#">Bottle</a></li>
-                    <li><a href="#">Equipment</a></li>
-                    <li><a href="#">Training Shoes</a></li>
-                    <li><a href="#">Protein Powder</a></li>
+                    <li><a href="dungcuShop.html">Equipment</a></li>
+                    <li><a href="giayShop.html">Training Shoes</a></li>
+                    <li><a href="bottleShop.html">Bottle</a></li>
+                    <li><a href="thucphamShop.html">Protein Powder</a></li>
                   </ul>
                 </div>
                 <div class="footer-col">
