--- a/giayShop.html
+++ b/giayShop.html
@@ -62,10 +62,10 @@
               <input type="checkbox" id="showDrop">
               <label for="showDrop" class="mobile-item">Online Shopping</label>
               <ul class="drop-menu">
-                <li><a href="#">Bottle</a></li>
-                <li><a href="#">Equipment</a></li>
-                <li><a href="#">Training Shoes</a></li>
-                <li><a href="#">Protein Powder</a></li>
+                <li><a href="dungcuShop.html">Equipment</a></li>
+                <li><a href="giayShop.html">Training Shoes</a></li>
+                <li><a href="bottleShop.html">Bottle</a></li>
+                <li><a href="thucphamShop.html">Protein Powder</a></li>
               </ul>
             </li>
             <li>
@@ -183,10 +183,10 @@
                 <div class="footer-col">
                   <h4>Online shop</h4>
                   <ul>
-                    <li><a href="#">Bottle</a></li>
-                    <li><a href="#">Equipment</a></li>
-                    <li><a href="#">Training Shoes</a></li>
-                    <li><a href="#">Protein Powder</a></li>
+                    <li><a href="dungcuShop.html">Equipment</a></li>
+                    <li><a href="giayShop.html">Training Shoes</a></li>
+                    <li><a href="bottleShop.html">Bottle</a></li>
+                    <li><a href="thucphamShop.html">Protein Powder</a></li>
                   </ul>
                 </div>
                 <div class="footer-col">
