--- a/thucphamShop.html
+++ b/thucphamShop.html
@@ -62,10 +62,10 @@
               <input type="checkbox" id="showDrop">
               <label for="showDrop" class="mobile-item">Online Shopping</label>
               <ul class="drop-menu">
-                <li><a href="#">Bottle</a></li>
-                <li><a href="#">Equipment</a></li>
-                <li><a href="#">Training Shoes</a></li>
-                <li><a href="#">Protein Powder</a></li>
+                    <li><a href="dungcuShop.html">Equipment</a></li>
+                    <li><a href="giayShop.html">Training Shoes</a></li>
+                    <li><a href="bottleShop.html">Bottle</a></li>
+                    <li><a href="thucphamShop.html">Protein Powder</a></li>
               </ul>
             </li>
             <li>
@@ -96,10 +96,10 @@
                 </td>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/giay1.webp" alt=""></a>
+                        <a href=""><img src="doAn/tpcn1.webp" alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">Nike Metcon 8 MF</p>
-                            <p class="tien">$154.11</p>
+                            <p class="nameGiay">Ostrovit Vege Protein</p>
+                            <p class="tien">$23.7</p>
                             <button type="">
                                 add to cart
                             </button>
@@ -108,10 +108,10 @@
                 </td>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/giay2.webp" alt=""></a>
+                        <a href=""><img src="doAn/tpcn2.webp" alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">Nike Metcon 8</p>
-                            <p class="tien">$154.11</p>
+                            <p class="nameGiay">Hush & Hush Plant Your Day</p>
+                            <p class="tien">$90.5</p>
                             <button type="">
                                 add to cart
                             </button>
@@ -120,10 +120,10 @@
                 </td>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/giay3.webp" alt=""></a>
+                        <a href=""><img src="doAn/tpcn3.webp" alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">Nike Metcon 8</p>
-                            <p class="tien">$154.11</p>
+                            <p class="nameGiay">Rule1 Protein Isolate 2.5Lbs</p>
+                            <p class="tien">$48.2</p>
                             <button type="">
                                 add to cart
                             </button>
@@ -134,10 +134,10 @@
             <tr>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/giay4.webp" alt=""></a>
+                        <a href=""><img src="doAn/tpcn4.webp" alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">Nike Defy All Day</p>
-                            <p class="tien">$76.83</p>
+                            <p class="nameGiay">Serious Mass </p>
+                            <p class="tien">$43.83</p>
                             <button type="">
                                 add to cart
                             </button>
@@ -146,10 +146,10 @@
                 </td>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/giay5.webp" alt=""></a>
+                        <a href=""><img src="doAn/tpcn5.webp" alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">Nike Air Zoom SuperRep 3</p>
-                            <p class="tien">$141.63</p>
+                            <p class="nameGiay">Zprotein 5lbs</p>
+                            <p class="tien">$74</p>
                             <button type="">
                                 add to cart
                             </button>
@@ -158,10 +158,10 @@
                 </td>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/giay6.webp" alt=""></a>
+                        <a href=""><img src="doAn/tpcn6.webp" alt=""></a>
                         <figcaption>
-                            <p class="nameGiay">Nike MC Trainer</p>
-                            <p class="tien">$83.27</p>
+                            <p class="nameGiay">Pure Whey</p>
+                            <p class="tien">$63.5</p>
                             <button type="">
                                 add to cart
                             </button>
