--- a/home.html
+++ b/home.html
@@ -115,22 +115,22 @@
           <tr>
             <td>
               <div class="row-1">
-                <img src="doAn\tpcn1.webp" width="250" height="250">
+                <a href="#"><img src="doAn\tpcn1.webp" width="250" height="250"></a>
                 <figcaption>Nitro Tech Whey Protein</figcaption>
               </div>
             </td>
             <td><div class="row-1">
-              <img src="doAn\giay1.webp" width="250" height="250">
+              <a href="#"><img src="doAn\giay1.webp" width="250" height="250"></a>
               <figcaption>Nike Green Shoes</figcaption>
             </div>
           </td>
             <td><div class="row-1">
-              <img src="doAn\dungcu1.jpg" width="250" height="250">
+              <a href="#"><img src="doAn\dungcu1.jpg" width="250" height="250"></a>
               <figcaption>Leg Machine</figcaption>
             </div>
           </td>
             <td><div class="row-1">
-              <img src="doAn\bottle1.webp" width="250" height="250">
+              <a href="#"><img src="doAn\dungcu1.jpg" width="250" height="250"></a>
               <figcaption>Spider Bottle</figcaption>
             </div>
           </td>
