--- a/home.html
+++ b/home.html
@@ -115,12 +115,12 @@
           <tr>
             <td>
               <div class="row-1">
-                <a href="#"><img src="doAn\tpcn1.webp" width="250" height="250"></a>
+                <img src="doAn\tpcn1.webp" width="250" height="250">
                 <figcaption>Nitro Tech Whey Protein</figcaption>
               </div>
             </td>
             <td><div class="row-1">
-              <a href="#"><img src="doAn\giay1.webp" width="250" height="250"></a>
+              <img src="doAn\giay1.webp" width="250" height="250">
               <figcaption>Nike Green Shoes</figcaption>
             </div>
           </td>
