--- a/home.html
+++ b/home.html
@@ -125,13 +125,8 @@
             </div>
           </td>
             <td><div class="row-1">
-              <a href="#"><img src="doAn\dungcu1.jpg" width="250" height="250"></a>
-              <figcaption>Leg Machine</figcaption>
-            </div>
-          </td>
-            <td><div class="row-1">
-              <a href="#"><img src="doAn\dungcu1.jpg" width="250" height="250"></a>
-              <figcaption>Spider Bottle</figcaption>
+              <img src="doAn\dcu6.jpg" width="250" height="250">
+              <figcaption>Jump Rope</figcaption>
             </div>
           </td>
           </tr>
