--- a/aboutus2.html
+++ b/aboutus2.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <LINK rel=“stylesheet” href=“body.css”/>
-    <script src="angular.min.js"></script>
+    <script src="js/angular.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
         
 
@@ -184,7 +184,7 @@ text-align: center;
             <br><br><br><br><br><br>
             <div class="mau" >
                <div class="anh-trai">
-                <img id="phong" align="left" align="center"  src="doAn/1.jpg" width="670px" height="470px" style="margin-left:11% ;"  >
+                <img id="phong" align="left" align="center"  src="imgs/1.jpg" width="670px" height="470px" style="margin-left:11% ;"  >
                </div> 
                <div class="text-phai">
                 <h1>FITNESS AREA</h1>
@@ -201,7 +201,7 @@ text-align: center;
             <div class="khoangtrang"></div>
             <div class="me">
                 <div class="anh-phai">
-                    <img id="phong" align="right" align="center" src="doAn/2.jpg" width="670px" height="470px"  >
+                    <img id="phong" align="right" align="center" src="imgs/2.jpg" width="670px" height="470px"  >
                 </div>
                 <div class="text-trai">
                     <h1>YOGA PRACTICE AREA</h1>
@@ -217,7 +217,7 @@ text-align: center;
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
              <div class="mauu" >
                 <div class="anh-traii">
-                 <img id="phong" align="left" align="center"  src="doAn/3.jpg" width="670px" height="470px" style="margin-left:11% ;"  >
+                 <img id="phong" align="left" align="center"  src="imgs/3.jpg" width="670px" height="470px" style="margin-left:11% ;"  >
                 </div> 
                 <div class="text-phai">
                  <h1>BOXING PRACTICE AREA</h1>
@@ -245,7 +245,7 @@ text-align: center;
     <div class="khoangtrangggg"></div>
 <div class="meeee">
     <div class="anh-phaiiii">
-        <img id="phong" align="right" align="center" src="doAn/4.jpg" width="670px" height="470px"  >
+        <img id="phong" align="right" align="center" src="imgs/4.jpg" width="670px" height="470px"  >
     </div>
     <div class="text-traiiii">
         <h1>DANCE PRACTICE AREA</h1>
@@ -264,7 +264,7 @@ text-align: center;
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <div class="mauuuu" >
         <div class="anh-traiiii">
-         <img id="phong" align="left" align="center"  src="doAn/5.jpg" width="670px" height="470px" style="margin-left:11% ;"  >
+         <img id="phong" align="left" align="center"  src="imgs/5.jpg" width="670px" height="470px" style="margin-left:11% ;"  >
         </div> 
         <div class="text-phaiiii">
          <h1>SAUNA AREA</h1>
