--- a/home.html
+++ b/home.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="angular.min.js"></script>
+    <script src="js/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
       /* Make the image fully responsive */
       .carousel-inner img {
@@ -24,7 +24,7 @@
 <body>
       <nav>
         <div class="wrapper">
-          <div class="logo"><a href="#"><img src="doAn/pic1.png " class="log"></a></div>
+          <div class="logo"><a href="#"><img src="imgs/pic1.png" class="log"></a></div>
           <input type="radio" name="slider" id="menu-btn">
           <input type="radio" name="slider" id="close-btn">
           <ul class="nav-links">
@@ -100,7 +100,7 @@
         <div class="table-response">
           <table class="trainer">
             <tr>
-              <td><img src="doAn/yoga.jpg" alt="" class="hlv"></td>
+              <td><img src="imgs/yoga.jpg" alt="" class="hlv"></td>
               <td class="para">
                 <h1>Yoga by Sophie</h1><br>
                 <p>Sophie, a Yoga teacher teaches with heart, enthusiasm and continuous learning, certified as an international yoga teacher by the Asean yoga association. Teachers teach online with thousands of students. Besides, she is also an inspiration to help people practice yoga for a better life. Currently on Sophie's youtube channel there are more than 191,000 subscribers and on the fanpage there are more than 28,000 followers. With these 2 main information pages, people can easily register to try this sport.</p><br>
@@ -115,17 +115,17 @@
           <tr>
             <td>
               <div class="row-1">
-                <img src="doAn\tpcn1.webp" width="250" height="250">
+                <img src="imgs/tpcn1.webp" width="250" height="250">
                 <figcaption>Nitro Tech Whey Protein</figcaption>
               </div>
             </td>
             <td><div class="row-1">
-              <img src="doAn\giay1.webp" width="250" height="250">
+              <img src="imgs/giay1.webp" width="250" height="250">
               <figcaption>Nike Green Shoes</figcaption>
             </div>
           </td>
             <td><div class="row-1">
-              <img src="doAn\dcu6.jpg" width="250" height="250">
+              <img src="imgs/dcu6.jpg" width="250" height="250">
               <figcaption>Jump Rope</figcaption>
             </div>
           </td>
