--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
         </div>
       </nav>
         <div class="hding">
-            <img src="doAn/1128335.jpg" width="100%" >
+            <img src="imgs/1128335.jpg" width="100%" >
             <div class="slogan">
               <p class="text">BREAK IT<br><u>OR</u><br>MAKE IT!</p>
               <button class="book"><a href="#">Book Now</a></button>
