--- a/aboutus3.html
+++ b/aboutus3.html
@@ -9,6 +9,7 @@
     <script src="js/angular.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="aboutus.css">
+    <link rel="stylesheet" href="style.css">
     <style>
                header{
             background: black;color:white;
