--- a/feesback2.html
+++ b/feesback2.html
@@ -67,7 +67,7 @@
         </div>
       </nav>
     <div class="img-bg">
-         <img src="imgs/1128335.jpg"atlat=""
+         <img src="feedback.webp"atlat=""
          style="width:100%;height:100%;">
          
      </div>
