--- a/home.html
+++ b/home.html
@@ -5,18 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="angular.min.js"></script>
+    <script src="js/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <style>
+      /* Make the image fully responsive */
+      .carousel-inner img {
+        text-align: center;
+      }
+      </style>
 </head>
+
 <body>
       <nav>
         <div class="wrapper">
-          <div class="logo"><a href="#">Prime Fitness</a></div>
+          <div class="logo"><a href="#"><img src="imgs/pic1.png" class="log"></a></div>
           <input type="radio" name="slider" id="menu-btn">
           <input type="radio" name="slider" id="close-btn">
           <ul class="nav-links">
@@ -47,17 +55,17 @@
               </ul>
             </li>
             <li><a href="#">Feedback</a></li>
-            <li><a href="#"><i class="glyphicon glyphicon-user"></i>  Log in</a></li>
+            <li><a href="#"><i class="glyphicon glyphicon-user"></i>Log in</a></li>
           </ul>
           <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
         </div>
       </nav>
-      <div class="hding">
-        <img src="doAn/1128335.jpg" width="100%">
-      <div class="slogan">
-        <p class="text">MAKE IT<br><u>OR</u><br> BREAK IT!</p>
-        <button class="book"><a href="#">Book Now</a></button>
-      </div>
+        <div class="hding">
+            <img src="imgs/1128335.jpg" width="100%" >
+            <div class="slogan">
+              <p class="text">BREAK IT<br><u>OR</u><br>MAKE IT!</p>
+              <button class="book"><a href="#">Book Now</a></button>
+            </div>
       </div>
         <h2>Our Classes</h2>
         <div class="class"> 
@@ -77,20 +85,53 @@
               <td>45 mins</td>
               <td><button class="book"><a href="#">Book Now</a></button></td>
             </tr>
+            <tr>
+              <td><a href="#">Yoga</a></td>
+              <td>45 mins</td>
+              <td><button class="book"><a href="#">Book Now</a></button></td>
+            </tr>
+            <tr>
+              <td><a href="#">Personal Training</a></td>
+              <td>Depends</td>
+              <td><button class="book"><a href="#">Book Now</a></button></td>
+            </tr>
           </table>
         </div>
-        <div class="table-respons">
+        <div class="table-response">
           <table class="trainer">
             <tr>
-              <td><img src="doAn/yoga.jpg" alt="" class="hlv"></td>
+              <td><img src="imgs/yoga.jpg" alt="" class="hlv"></td>
               <td class="para">
                 <h1>Yoga by Sophie</h1><br>
                 <p>Sophie, a Yoga teacher teaches with heart, enthusiasm and continuous learning, certified as an international yoga teacher by the Asean yoga association. Teachers teach online with thousands of students. Besides, she is also an inspiration to help people practice yoga for a better life. Currently on Sophie's youtube channel there are more than 191,000 subscribers and on the fanpage there are more than 28,000 followers. With these 2 main information pages, people can easily register to try this sport.</p><br>
-                <button class="book">More Trainers</button>
+                <button class="book" style="font-size: 15px;">More Trainers</button>
               </td>
             </tr>
           </table>
         </div><br><br>
+        <h1 style="text-align: center; font-weight:bold; font-size:90px; font-family: 'Poppins', sans-serif; padding:100px;">Best Seller</h1>
+       <div class="best">
+        <table class="sell">
+          <tr>
+            <td>
+              <div class="row-1">
+                <img src="imgs/tpcn1.webp" width="250" height="250">
+                <figcaption>Nitro Tech Whey Protein</figcaption>
+              </div>
+            </td>
+            <td><div class="row-1">
+              <img src="imgs/giay1.webp" width="250" height="250">
+              <figcaption>Nike Green Shoes</figcaption>
+            </div>
+          </td>
+            <td><div class="row-1">
+              <img src="imgs/dcu6.jpg" width="250" height="250">
+              <figcaption>Jump Rope</figcaption>
+            </div>
+          </td>
+          </tr>
+        </table>
+       </div>
       <footer class="footer">
         <div class="container">
           <div class="row">
@@ -133,7 +174,6 @@
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
               </div>
             </div>
           </div>
