--- a/home.html
+++ b/home.html
@@ -162,7 +162,7 @@
               </ul>
             </div>
             <div class="footer-col">
-              <h4>Contact us</h4>
+              <h4>Contact us</h4>3
               <ul class="contact">
                 <li><span class="glyphicon glyphicon-earphone"></span>  123-456-7890</li>
                 <li><span class="glyphicon glyphicon-home"></span>  862/B,VTR PLAZA,2nd floor,4th main road, 
