--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
           <ul class="nav-links">
             <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
             <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="aboutUs.html">About Us</a></li>
             <li><a href="#">Blogs</a></li>
             <li>
               <a href="#" class="desktop-item">Online Shopping</a>
@@ -48,7 +48,7 @@
                 <li><a href="#">Personal Training</a></li>
               </ul>
             </li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="contactUs.html">Contact Us</a></li>
             <li><a href="#"><i class="glyphicon glyphicon-user"></i>Log in</a></li>
           </ul>
           <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
